--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
 										<p class="text-muted">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
 										<p class="text-muted">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
 									<div class="social-icon">
-										<a class="p-3 fa-2x" href=""><i class="fab fa-facebook"></i></a>
-										<a class="p-3 fa-2x" href=""><i class="fab fa-youtube"></i></a>
-										<a class="p-3 fa-2x" href=""><i class="fab fa-twitter"></i></a>
-										<a class="p-3 fa-2x" href=""><i class="fab fa-instagram"></i></a>
+										<a clas fa-2x" href=""><i class="fab fa-facebook"></i></a>
+										<a clas fa-2x" href=""><i class="fab fa-youtube"></i></a>
+										<a clas fa-2x" href=""><i class="fab fa-twitter"></i></a>
+										<a clas fa-2x" href=""><i class="fab fa-instagram"></i></a>
 									</div>
 								</div>
 								</div>
@@ -326,10 +326,10 @@
 													<br>
 													<br>
 													<div class="social-icon">
-														<a class="p-3 fa-2x" href=""><i class="fab fa-facebook"></i></a>
-														<a class="p-3 fa-2x" href=""><i class="fab fa-youtube"></i></a>
-														<a class="p-3 fa-2x" href=""><i class="fab fa-twitter"></i></a>
-														<a class="p-3 fa-2x" href=""><i class="fab fa-instagram"></i></a>
+														<a class=" fa-2x" href=""><i class="fab fa-facebook"></i></a>
+														<a class=" fa-2x" href=""><i class="fab fa-youtube"></i></a>
+														<a class=" fa-2x" href=""><i class="fab fa-twitter"></i></a>
+														<a class=" fa-2x" href=""><i class="fab fa-instagram"></i></a>
 													</div>
 													<br>
 													<p class="text-muted">Desgin by <a class="text-danger" href="">Shakib</a></p>
