--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 							<div class="container">
 								<div class="row pt-5">
 									<div class="col-md-6 pt-5">
-										<img class="img-thumbnail" style="transform: rotate(540deg);" src="img/IMG_20190904_181318.jpg" alt="">
+										<img class="img-thumbnail" src="img/IMG_20190904_181318.jpg" alt="">
 									</div>
 									<div class="col-md-6 pt-5">
 										<h1>About Me</h1>
